security(backend): externalize RSA keys and forbid classpath loading in production